# pf-webos

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Taskfile.yml  build.rs  repo.json
.cargo/: config.toml
.github/workflows/: build.yml
assets/fonts/: NOTICE.md
assets/icons/: NOTICE.md
assets/logo/: NOTICE.md
docs/: NOTES.md
packaging/: appinfo.json  description.html
scripts/: cc-shim.sh  cxx-shim.sh
src/: app.rs  art.rs  audio.rs  compositor.rs  discovery.rs  gamepad.rs  glibc_compat_shim.c  keyboard.rs  library.rs  main.rs  mouse.rs  ndl.rs  session.rs  starfish.rs  starfish_c_shim.cpp  store.rs  ui.rs  wol.rs
taskfiles/: toolchain.yml
