[package]
name = "punktfunk-webos"
description = "Native LG webOS TV client for punktfunk — session pump direct on punktfunk-core, NDL DirectMedia hardware video decode, SDL2 window/gamepad/remote input."
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Volodymyr Dyptan <volodymyr@dyptan.dev>"]
repository = "https://github.com/dyptan-io/pf-webos"

[[bin]]
name = "punktfunk-webos"
path = "src/main.rs"

[lints.clippy]
# `clippy::all` (correctness/suspicious/style/complexity/perf) is already clean and
# enabled by default — this section adds a curated slice of `pedantic`/`nursery`
# lints worth enforcing project-wide, picked for being unambiguous idiom
# improvements with near-zero false-positive rate. Deliberately NOT a blanket
# `#![warn(clippy::pedantic)]`/`clippy::nursery`: this is an SDL2 2D-rendering
# client where most pixel/rect/color math is small ints and floats bounded by a TV
# panel's own resolution (well under 2^16 in every dimension) — the
# `cast_possible_truncation`/`cast_sign_loss`/`cast_precision_loss`/
# `cast_possible_wrap` lints alone accounted for over 300 of ~360 pedantic
# warnings here, none of them a real risk at these magnitudes; enabling them
# would mean annotating (or `try_from`-ing) hundreds of call sites for no actual
# safety gain, drowning out the lints below that do catch something real.
cast_lossless = "warn" # `x as WiderType` where `WiderType::from(x)` is exact and infallible — real, zero-cost cleanup.
map_unwrap_or = "warn" # `.map(f).unwrap_or(a)`/`unwrap_or_else(g)` → `.map_or(a, f)`/`.map_or_else(g, f)`.
use_self = "warn" # `Struct { .. }`/`Struct::method()` inside `impl Struct` → `Self`.
doc_markdown = "warn" # Bare identifiers in doc comments that should be `` `backticked` ``.
manual_let_else = "warn" # `match`/`if let` that just returns/continues on the other arm → `let ... else`.
redundant_closure_for_method_calls = "warn"
items_after_statements = "warn"
match_same_arms = "warn"
format_collect = "warn" # `.map(|x| format!(...)).collect::<String>()`-shaped loops building a String.
suspicious_operation_groupings = "warn" # caught a real field-name mismatch risk once already — see app.rs.

[dependencies]
anyhow = "1"
# Pure Rust + libc (unix), portable — no FFmpeg/PipeWire/SDL3 baggage, unlike
# pf-client-core's session::start() (see session.rs docs for why we don't use that).
# Pinned to a tagged punktfunk release (not a branch tip) this client was
# developed/tested against — bump deliberately, not automatically, since
# punktfunk-core's wire/ABI surface can move. Currently v0.16.0 — WIRE_VERSION 2
# (unchanged since this pin's previous v0.9.2-based commit; no protocol migration
# needed here), ABI_VERSION 9 (irrelevant to us: we link the Rust `client` API
# directly, not the C ABI in `abi.rs`, and that module's signatures are unchanged
# across the whole v0.9.2..v0.16.0 range).
punktfunk-core = { git = "https://git.unom.io/unom/punktfunk", tag = "v0.16.0", features = [
    "quic",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# LAN host discovery (discovery.rs) — pure Rust, same crate pf-client-core uses, but
# a direct dependency here (see session.rs docs on why we don't depend on that crate).
mdns-sd = "0.20"

# `armv7-unknown-linux-gnueabi` (the webOS cross target) reports target_os = "linux",
# same as a native Linux dev box — gated the same way pf-presenter (in the upstream
# punktfunk repo) gates its SDL3 dependency to `cfg(any(target_os = "linux", windows))`,
# so `cargo build` on macOS/Windows (no target_os=linux) doesn't need SDL2 at all;
# main.rs has a stub body for that case. Found via pkg-config using the cross env
# vars in .cargo/config.toml against the webOS sysroot (`task toolchain`) — no
# bundled/static build.
[target.'cfg(target_os = "linux")'.dependencies]
# "ttf": SDL2_ttf + freetype are already on-device (confirmed on the CX), and we
# render with LG's own system font (/usr/share/fonts/LG_Smart_UI-Regular.ttf) — see
# ui.rs. No bundling needed, same build-time-link/runtime-resolve pattern as NDL.
sdl2 = { version = "0.38", default-features = false, features = ["ttf"] }
# Opus decode for the host's audio planes (audio.rs) — already a transitive dep via
# punktfunk-core's `quic` feature (its C-ABI multistream path), but we call the crate
# directly ourselves so it needs to be an explicit dependency too.
opus = "0.3"
# Game-library fetch from the host's management API over mTLS + fingerprint pinning
# (library.rs) — a small standalone ureq+rustls client (not a dependency on the
# upstream repo's pf-client-core crate — see session.rs docs). `ring` cross-compiles
# cleanly for this target (already proven transitively via punktfunk-core's `quic`
# feature above).
ureq = { version = "3", features = ["rustls"], default-features = false }
rustls = { version = "0.23", features = ["ring"] }
# Decodes the management API's cover art (Steam CDN capsules/headers, custom-store
# art) into raw RGBA for a `tiny_skia::Pixmap` (library.rs/art.rs) — pure Rust codecs,
# no system libjpeg/libpng dependency to find on-device.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# The whole pre-stream UI's rendering backend (ui.rs) — a pure-Rust software
# rasterizer (anti-aliased fills/strokes, real box-blurred shadows), replacing the
# previous hand-rolled per-scanline SDL2 2D primitives (no Skia/Vulkan available on
# webOS — see ui.rs's module docs). Pure Rust like `image` above, so it cross-compiles
# the same way; `png-format` is off since this app only ever builds `Pixmap`s from
# already-decoded buffers (SDL2_ttf glyph surfaces, `image`-decoded covers), never
# loads a `.png` through tiny-skia itself.
tiny-skia = { version = "0.12", default-features = false, features = ["std"] }
