[package]
name = "punktfunk-webos"
description = "Native LG webOS TV client for punktfunk — session pump direct on punktfunk-core, NDL DirectMedia hardware video decode, SDL2 window/gamepad/remote input."
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Volodymyr Dyptan <volodymyr@dyptan.dev>"]
repository = "https://github.com/dyptan-io/pf-webos"

[[bin]]
name = "punktfunk-webos"
path = "src/main.rs"

[lints.clippy]
# `clippy::all` (correctness/suspicious/style/complexity/perf) is already clean and
# enabled by default — this section adds a curated slice of `pedantic`/`nursery`
# lints worth enforcing project-wide, picked for being unambiguous idiom
# improvements with near-zero false-positive rate. Deliberately NOT a blanket
# `#![warn(clippy::pedantic)]`/`clippy::nursery`: this is an SDL2 2D-rendering
# client where most pixel/rect/color math is small ints and floats bounded by a TV
# panel's own resolution (well under 2^16 in every dimension) — the
# `cast_possible_truncation`/`cast_sign_loss`/`cast_precision_loss`/
# `cast_possible_wrap` lints alone accounted for over 300 of ~360 pedantic
# warnings here, none of them a real risk at these magnitudes; enabling them
# would mean annotating (or `try_from`-ing) hundreds of call sites for no actual
# safety gain, drowning out the lints below that do catch something real.
cast_lossless = "warn" # `x as WiderType` where `WiderType::from(x)` is exact and infallible — real, zero-cost cleanup.
map_unwrap_or = "warn" # `.map(f).unwrap_or(a)`/`unwrap_or_else(g)` → `.map_or(a, f)`/`.map_or_else(g, f)`.
use_self = "warn" # `Struct { .. }`/`Struct::method()` inside `impl Struct` → `Self`.
doc_markdown = "warn" # Bare identifiers in doc comments that should be `` `backticked` ``.
manual_let_else = "warn" # `match`/`if let` that just returns/continues on the other arm → `let ... else`.
redundant_closure_for_method_calls = "warn"
items_after_statements = "warn"
match_same_arms = "warn"
format_collect = "warn" # `.map(|x| format!(...)).collect::<String>()`-shaped loops building a String.
suspicious_operation_groupings = "warn" # caught a real field-name mismatch risk once already — see app.rs.

[dependencies]
anyhow = "1"
# Surfaces punktfunk-core's own internal `tracing` diagnostics (ABR/probe decisions, RFI
# recovery internals — see main.rs's subscriber setup) into our log file. Without this, every
# `tracing::info!`/`warn!` call inside punktfunk-core is silently dropped (no-op absent a
# subscriber) — the exact link-capacity-probe/ABR-ceiling messages needed to tell "the network
# genuinely can't sustain more" apart from "something else is capping quality" were invisible
# for this whole client until this was added.
tracing = "0.1"
tracing-subscriber = "0.3"
# Pure Rust + libc (unix), portable — no FFmpeg/PipeWire/SDL3 baggage, unlike
# pf-client-core's session::start() (see session.rs docs for why we don't use that).
# Pinned to a tagged punktfunk release (not a branch tip) this client was
# developed/tested against — bump deliberately, not automatically, since
# punktfunk-core's wire/ABI surface can move. Currently v0.17.0 (bumped from
# v0.16.0) — WIRE_VERSION unchanged, and `client::NativeClient`'s public surface is
# identical, so this is a behavior-only bump. Pulled in for `VIDEO_CAP_STREAMED_AU`
# (added post-v0.16.0): the host's Linux direct-NVENC encoder can now stream a
# multi-slice frame's tail overlapped with packetize/FEC/pacing instead of waiting
# for the whole frame to encode first, cutting large-frame pipeline latency —
# helps most exactly where bigger (higher-bitrate) frames used to fall behind.
# No client code change needed: this crate already OR's the cap bit into every
# `Hello` unconditionally, it was just a no-op against an older host/core. The
# host machine's punktfunk-host needs to be on v0.17.0+ too, or it ignores the bit.
#
# Pending bump: the maintainer is adding ChaCha20-Poly1305 to the wire protocol (see
# docs/NOTES.md's high-bitrate decode entry — the CX's Cortex-A9 has no AES hardware,
# so software AES-GCM is a real decode-choppiness contributor at high bitrate). This
# client has no cipher-specific code of its own (crypto is internal to this crate,
# behind `NativeClient`) — when that lands, just bump the tag; do NOT add a
# client-side setting/toggle for it, it's the one cipher this client speaks.
punktfunk-core = { git = "https://git.unom.io/unom/punktfunk", tag = "v0.17.0", features = [
    "quic",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# LAN host discovery (discovery.rs) — pure Rust, same crate pf-client-core uses, but
# a direct dependency here (see session.rs docs on why we don't depend on that crate).
mdns-sd = "0.20"

# `armv7-unknown-linux-gnueabi` (the webOS cross target) reports target_os = "linux",
# same as a native Linux dev box — gated the same way pf-presenter (in the upstream
# punktfunk repo) gates its SDL3 dependency to `cfg(any(target_os = "linux", windows))`,
# so `cargo build` on macOS/Windows (no target_os=linux) doesn't need SDL2 at all;
# main.rs has a stub body for that case. Found via pkg-config using the cross env
# vars in .cargo/config.toml against the webOS sysroot (`task toolchain`) — no
# bundled/static build.
[target.'cfg(target_os = "linux")'.dependencies]
# "ttf": SDL2_ttf + freetype are already on-device (confirmed on the CX), and we
# render with LG's own system font (/usr/share/fonts/LG_Smart_UI-Regular.ttf) — see
# ui.rs. No bundling needed, same build-time-link/runtime-resolve pattern as NDL.
sdl2 = { version = "0.38", default-features = false, features = ["ttf"] }
# Opus decode for the host's audio planes (audio.rs) — already a transitive dep via
# punktfunk-core's `quic` feature (its C-ABI multistream path), but we call the crate
# directly ourselves so it needs to be an explicit dependency too.
opus = "0.3"
# Game-library fetch from the host's management API over mTLS + fingerprint pinning
# (library.rs) — a small standalone ureq+rustls client (not a dependency on the
# upstream repo's pf-client-core crate — see session.rs docs). `ring` cross-compiles
# cleanly for this target (already proven transitively via punktfunk-core's `quic`
# feature above).
ureq = { version = "3", features = ["rustls"], default-features = false }
rustls = { version = "0.23", features = ["ring"] }
# Decodes the management API's cover art (Steam CDN capsules/headers, custom-store
# art) into raw RGBA for a `tiny_skia::Pixmap` (library.rs/art.rs) — pure Rust codecs,
# no system libjpeg/libpng dependency to find on-device.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# The whole pre-stream UI's rendering backend (ui.rs) — a pure-Rust software
# rasterizer (anti-aliased fills/strokes, real box-blurred shadows), replacing the
# previous hand-rolled per-scanline SDL2 2D primitives (no Skia/Vulkan available on
# webOS — see ui.rs's module docs). Pure Rust like `image` above, so it cross-compiles
# the same way; `png-format` is off since this app only ever builds `Pixmap`s from
# already-decoded buffers (SDL2_ttf glyph surfaces, `image`-decoded covers), never
# loads a `.png` through tiny-skia itself.
tiny-skia = { version = "0.12", default-features = false, features = ["std"] }
# `setpriority` for the video pump's scheduling-priority boost (session.rs) — already a
# transitive dependency (punktfunk-core itself uses `libc::gettid` for its hot-thread
# registry), pulled in directly since we call our own libc function against those ids.
libc = "0.2"
