[package]
name = "punktfunk-webos"
description = "Native LG webOS TV client for punktfunk ŌĆö session pump direct on punktfunk-core, NDL DirectMedia hardware video decode, SDL2 window/gamepad/remote input."
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Volodymyr Dyptan <volodymyr@dyptan.dev>"]
repository = "https://github.com/dyptan-io/pf-webos"

[[bin]]
name = "punktfunk-webos"
path = "src/main.rs"

[lints.clippy]
# `clippy::all` (correctness/suspicious/style/complexity/perf) is already clean and
# enabled by default ŌĆö this section adds a curated slice of `pedantic`/`nursery`
# lints worth enforcing project-wide, picked for being unambiguous idiom
# improvements with near-zero false-positive rate. Deliberately NOT a blanket
# `#![warn(clippy::pedantic)]`/`clippy::nursery`: this is an SDL2 2D-rendering
# client where most pixel/rect/color math is small ints and floats bounded by a TV
# panel's own resolution (well under 2^16 in every dimension) ŌĆö the
# `cast_possible_truncation`/`cast_sign_loss`/`cast_precision_loss`/
# `cast_possible_wrap` lints alone accounted for over 300 of ~360 pedantic
# warnings here, none of them a real risk at these magnitudes; enabling them
# would mean annotating (or `try_from`-ing) hundreds of call sites for no actual
# safety gain, drowning out the lints below that do catch something real.
cast_lossless = "warn" # `x as WiderType` where `WiderType::from(x)` is exact and infallible ŌĆö real, zero-cost cleanup.
map_unwrap_or = "warn" # `.map(f).unwrap_or(a)`/`unwrap_or_else(g)` ŌåÆ `.map_or(a, f)`/`.map_or_else(g, f)`.
use_self = "warn" # `Struct { .. }`/`Struct::method()` inside `impl Struct` ŌåÆ `Self`.
doc_markdown = "warn" # Bare identifiers in doc comments that should be `` `backticked` ``.
manual_let_else = "warn" # `match`/`if let` that just returns/continues on the other arm ŌåÆ `let ... else`.
redundant_closure_for_method_calls = "warn"
items_after_statements = "warn"
match_same_arms = "warn"
format_collect = "warn" # `.map(|x| format!(...)).collect::<String>()`-shaped loops building a String.
suspicious_operation_groupings = "warn" # caught a real field-name mismatch risk once already ŌĆö see app.rs.

[dependencies]
anyhow = "1"
# Surfaces punktfunk-core's own internal `tracing` diagnostics (ABR/probe decisions, RFI
# recovery internals ŌĆö see main.rs's subscriber setup) into our log file. Without this, every
# `tracing::info!`/`warn!` call inside punktfunk-core is silently dropped (no-op absent a
# subscriber) ŌĆö the exact link-capacity-probe/ABR-ceiling messages needed to tell "the network
# genuinely can't sustain more" apart from "something else is capping quality" were invisible
# for this whole client until this was added.
tracing = "0.1"
tracing-subscriber = "0.3"
# Pure Rust + libc (unix), portable ŌĆö no FFmpeg/PipeWire/SDL3 baggage, unlike
# pf-client-core's session::start() (see session.rs docs for why we don't use that).
# Pinned to a tagged punktfunk release (not a branch tip) this client was
# developed/tested against ŌĆö bump deliberately, not automatically, since
# punktfunk-core's wire/ABI surface can move. Currently v0.17.2 ŌĆö bumped from
# v0.16.0 for the ChaCha20-Poly1305 session cipher (session.rs advertises
# `VIDEO_CAP_CHACHA20`; lifts the soft-AES decrypt ceiling on this armv7 target).
# WIRE_VERSION 2 (verified unchanged across v0.16.0..v0.17.2 ŌĆö the cipher rides a
# new Welcome tail field, fail-closed, no protocol migration), and the C ABI in
# `abi.rs` stays irrelevant to us (we link the Rust `client` API directly;
# `NativeClient::connect`'s signature is unchanged across the bump).
punktfunk-core = { git = "https://git.unom.io/unom/punktfunk", tag = "v0.17.2", features = [
    "quic",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# LAN host discovery (discovery.rs) ŌĆö pure Rust, same crate pf-client-core uses, but
# a direct dependency here (see session.rs docs on why we don't depend on that crate).
mdns-sd = "0.20"

# `armv7-unknown-linux-gnueabi` (the webOS cross target) reports target_os = "linux",
# same as a native Linux dev box ŌĆö gated the same way pf-presenter (in the upstream
# punktfunk repo) gates its SDL3 dependency to `cfg(any(target_os = "linux", windows))`,
# so `cargo build` on macOS/Windows (no target_os=linux) doesn't need SDL2 at all;
# main.rs has a stub body for that case. Found via pkg-config using the cross env
# vars in .cargo/config.toml against the webOS sysroot (`task toolchain`) ŌĆö no
# bundled/static build.
[target.'cfg(target_os = "linux")'.dependencies]
# "ttf": SDL2_ttf + freetype are already on-device (confirmed on the CX). Text
# renders in punktfunk's brand font, Geist, embedded from assets/fonts/ (see
# ui.rs::load_font) ŌĆö the on-device LG system font is no longer used.
# `unsafe_textures`: drops the `Texture<'r>` lifetime tie to its `TextureCreator`,
# so the GPU compositor (see `compositor.rs`) can hold its texture cache in a
# struct. Textures then don't auto-destroy on drop ŌĆö ours live for the app's
# lifetime, freed with the GL context at exit.
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "unsafe_textures"] }
# Opus decode for the host's audio planes (audio.rs) ŌĆö already a transitive dep via
# punktfunk-core's `quic` feature (its C-ABI multistream path), but we call the crate
# directly ourselves so it needs to be an explicit dependency too.
opus = "0.3"
# Game-library fetch from the host's management API over mTLS + fingerprint pinning
# (library.rs) ŌĆö a small standalone ureq+rustls client (not a dependency on the
# upstream repo's pf-client-core crate ŌĆö see session.rs docs). `ring` cross-compiles
# cleanly for this target (already proven transitively via punktfunk-core's `quic`
# feature above).
ureq = { version = "3", features = ["rustls"], default-features = false }
rustls = { version = "0.23", features = ["ring"] }
# Decodes the management API's cover art (Steam CDN capsules/headers, custom-store
# art) into raw RGBA for a `tiny_skia::Pixmap` (library.rs/art.rs) ŌĆö pure Rust codecs,
# no system libjpeg/libpng dependency to find on-device.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# The whole pre-stream UI's rendering backend (ui.rs) ŌĆö a pure-Rust software
# rasterizer (anti-aliased fills/strokes, real box-blurred shadows), replacing the
# previous hand-rolled per-scanline SDL2 2D primitives (no Skia/Vulkan available on
# webOS ŌĆö see ui.rs's module docs). Pure Rust like `image` above, so it cross-compiles
# the same way; `png-format` is off since this app only ever builds `Pixmap`s from
# already-decoded buffers (SDL2_ttf glyph surfaces, `image`-decoded covers), never
# loads a `.png` through tiny-skia itself.
tiny-skia = { version = "0.12", default-features = false, features = ["std"] }
# `setpriority` for the video pump's scheduling-priority boost (session.rs) ŌĆö already a
# transitive dependency (punktfunk-core itself uses `libc::gettid` for its hot-thread
# registry), pulled in directly since we call our own libc function against those ids.
libc = "0.2"

[profile.release]
# The per-packet hot loops this client actually burns CPU in ŌĆö AEAD decrypt, FEC
# reassembly, QUIC/packet parsing ŌĆö all live in punktfunk-core and its deps, not this
# crate, so cargo's defaults (no cross-crate LTO, 16 codegen units) leave the
# optimizer unable to inline across exactly the boundaries that matter on this
# hardware. Fat LTO + one codegen unit costs build time (the deploy loop already runs
# in Docker; drop to lto = "thin" if it ever gets painful) in exchange for the best
# codegen the pinned toolchain can produce ŌĆö this directly cheapens today's software
# AES path and the ChaCha20-Poly1305 one planned to replace it.
lto = "fat"
codegen-units = 1
